--- a/package.xml
+++ b/package.xml
@@ -8,7 +8,7 @@
 
   <license>BSD</license>
 
-  <author>Hanzhe Teng</author>
+  <author>Yipeng Wang</author>
 
   <buildtool_depend>catkin</buildtool_depend>
 
